# handheld

./: .gitignore  LICENSE  README.md  pyproject.toml
modal-deployment/: README.md  SETUP.md  deploy.py  deploy.sh  test_auth.py
modal-deployment/web/: agent.html  dashboard.html  login.html
